--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "env-cmd -f dev.env npm start",
+    "start:prod": "env-cmd -f prod.env npm start",
+    "build:dev": "env-cmd -f dev.env npm run build",
+    "build:prod": "env-cmd -f prod.env npm run build"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +18,7 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3"
